[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/scenes/1/Door_Light.png" type="Texture" id=1]
[ext_resource path="res://assets/scenes/1/Background.png" type="Texture" id=2]
[ext_resource path="res://assets/scenes/1/Door.png" type="Texture" id=3]
[ext_resource path="res://assets/scenes/1/DustOverlay.png" type="Texture" id=4]
[ext_resource path="res://assets/scenes/1/Floor.png" type="Texture" id=5]
[ext_resource path="res://assets/scenes/1/Furniture.png" type="Texture" id=6]
[ext_resource path="res://assets/scenes/1/Greenlight.png" type="Texture" id=7]
[ext_resource path="res://assets/scenes/1/Window.png" type="Texture" id=8]
[ext_resource path="res://assets/scenes/1/Wall.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Transition_Scene.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scripts/Control.gd" type="Script" id=12]
[ext_resource path="res://assets/overlays/SaveSpot_Hover.png" type="Texture" id=13]
[ext_resource path="res://assets/overlays/SaveSpot.png" type="Texture" id=14]
[ext_resource path="res://assets/overlays/SaveSpot_Click.png" type="Texture" id=15]
[ext_resource path="res://assets/fonts/October Crow.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://Scripts/Charles_Room.gd" type="Script" id=17]
[ext_resource path="res://assets/fonts/The Macabre.otf" type="DynamicFontData" id=18]
[ext_resource path="res://assets/items/ink.png" type="Texture" id=19]
[ext_resource path="res://assets/items/key.png" type="Texture" id=20]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( 1558.05, 1021.89, 1715.2, 1033.12, 1769.08, 1087, -4.41388, 1082.51, -6.65881, 970.261, 1562.54, 972.506, 1607.44, 1010.67 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4 ), PoolIntArray( 4, 5, 0 ), PoolIntArray( 1, 0, 6 ) ]
outlines = [ PoolVector2Array( -6.65881, 970.261, -4.41388, 1082.51, 1769.08, 1087, 1715.2, 1033.12, 1607.44, 1010.67, 1558.05, 1021.89, 1562.54, 972.506 ) ]

[sub_resource type="DynamicFont" id=2]
size = 52
font_data = ExtResource( 16 )

[sub_resource type="DynamicFont" id=3]
size = 40
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 18 )

[node name="Charles_Room" type="Node"]
script = ExtResource( 17 )

[node name="Control" type="Control" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 954.44, 546.933 )
mouse_filter = 2
mouse_default_cursor_shape = 3
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area_Move" type="Control" parent="Control"]
anchor_top = 0.887
anchor_right = 0.949
anchor_bottom = 1.001
margin_top = 0.039978
margin_right = -398.08
margin_bottom = 82.9199
rect_scale = Vector2( 1.28, 0.6 )
mouse_default_cursor_shape = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Environment" type="Node" parent="Control"]

[node name="Background" type="Sprite" parent="Control/Environment"]
z_index = -1
texture = ExtResource( 2 )
centered = false

[node name="Floor" type="Sprite" parent="Control/Environment"]
z_index = -1
texture = ExtResource( 5 )
centered = false

[node name="Door" type="Sprite" parent="Control/Environment" groups=[
"Persist",
]]
z_index = -1
texture = ExtResource( 3 )
centered = false

[node name="Wall" type="Sprite" parent="Control/Environment"]
z_index = -1
texture = ExtResource( 9 )
centered = false

[node name="Furniture" type="Sprite" parent="Control/Environment"]
z_index = -1
texture = ExtResource( 6 )
centered = false

[node name="Greenlight" type="Sprite" parent="Control/Environment"]
visible = false
z_index = -1
texture = ExtResource( 7 )
centered = false

[node name="Window" type="Sprite" parent="Control/Environment"]
z_index = -1
texture = ExtResource( 8 )
centered = false

[node name="Door_Light" type="Sprite" parent="Control/Environment" groups=[
"Persist",
]]
visible = false
z_index = -1
texture = ExtResource( 1 )
centered = false

[node name="Botoes" type="Node" parent="Control"]

[node name="SaveSpot" type="TextureButton" parent="Control/Botoes" groups=[
"Overlayed",
]]
margin_left = 1090.09
margin_top = 696.154
margin_right = 1232.09
margin_bottom = 838.154
hint_tooltip = "Save your Game"
focus_mode = 1
mouse_default_cursor_shape = 16
enabled_focus_mode = 1
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 13 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Item_Ink" type="TextureButton" parent="Control/Botoes" groups=[
"Overlayed",
]]
margin_left = 1784.65
margin_top = 853.194
margin_right = 1850.65
margin_bottom = 919.194
hint_tooltip = "3x Ink
Is used to save the game"
focus_mode = 1
mouse_default_cursor_shape = 2
enabled_focus_mode = 1
texture_normal = ExtResource( 19 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Door" type="TextureButton" parent="Control/Botoes"]
margin_top = 428.0
margin_right = 160.0
margin_bottom = 985.0
hint_tooltip = "It's a door"
focus_mode = 1
mouse_default_cursor_shape = 2
enabled_focus_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharlesKey" type="TextureButton" parent="Control/Botoes" groups=[
"Overlayed",
]]
margin_left = 647.0
margin_top = 731.0
margin_right = 737.0
margin_bottom = 821.0
hint_tooltip = "It's the key for this door"
focus_mode = 1
mouse_default_cursor_shape = 2
enabled_focus_mode = 1
texture_normal = ExtResource( 20 )
texture_pressed = ExtResource( 20 )
texture_hover = ExtResource( 20 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Navigation2D" type="Navigation2D" parent="Control"]
position = Vector2( 1.69409, -4.51978 )
z_index = -1
z_as_relative = false

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Control/Navigation2D"]
z_index = -1
z_as_relative = false
navpoly = SubResource( 1 )

[node name="Line2D" type="Line2D" parent="Control"]
position = Vector2( 1319.2, 1013.98 )
z_index = 5
points = PoolVector2Array( -1317.79, -1013.58 )

[node name="DustOverlay" type="Sprite" parent="."]
position = Vector2( 958.415, 541.945 )
z_index = 2
texture = ExtResource( 4 )

[node name="SaveConfirm" type="Label" parent="."]
visible = false
margin_left = 215.894
margin_top = -0.795807
margin_right = 952.894
margin_bottom = 132.204
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "DO YOU WANT TO SAVE YOUR PROGRESS?
One ink is used in order to save."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sim" type="Button" parent="SaveConfirm"]
margin_left = 229.236
margin_top = 124.364
margin_right = 278.236
margin_bottom = 173.364
rect_scale = Vector2( 2, 2 )
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.529412, 0.52549, 0.52549, 1 )
text = "YES"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nao" type="Button" parent="SaveConfirm"]
margin_left = 407.092
margin_top = 126.327
margin_right = 457.092
margin_bottom = 175.327
rect_scale = Vector2( 2, 2 )
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.529412, 0.52549, 0.52549, 1 )
text = "NO"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Transition_Scene" parent="." instance=ExtResource( 11 )]
[connection signal="pressed" from="Control/Botoes/SaveSpot" to="." method="_on_SaveSpot_pressed"]
[connection signal="pressed" from="Control/Botoes/Item_Ink" to="." method="_on_Item_Ink_pressed"]
[connection signal="pressed" from="Control/Botoes/Door" to="." method="_on_Door_pressed"]
[connection signal="pressed" from="Control/Botoes/CharlesKey" to="." method="_on_CharlesKey_pressed"]
[connection signal="pressed" from="SaveConfirm/Sim" to="." method="_on_Sim_pressed"]
[connection signal="pressed" from="SaveConfirm/Nao" to="." method="_on_Nao_pressed"]
[connection signal="transitioned" from="Transition_Scene" to="." method="_on_Transition_Scene_transitioned"]
